# Haznet

./: .gitignore  README.md  db_setup.sh  package-lock.json  run.sh  start.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 000_create_core_tables.py  001_add_workflow_tables.py  002_add_doc_category.py  20260518150701_add_activity_logs_table.py  32b05bd65709_add_workflow_tracking_fields.py  554086bae434_add_requisition_new_fields.py  9fbfcaf8fb44_add_documents_table.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/api/: admin.py  auth.py  dashboard.py  documents.py  messages.py  orders.py  post_orders.py  public.py  requisitions.py  tenders.py  vendors.py  workflow.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  enums.py
backend/app/schemas/: __init__.py
backend/app/seed_data/: .~lock.users_import.xlsx#  users_import.xlsx
backend/app/services/: __init__.py  auth.py  requisition.py
backend/tests/: conftest.py  test_auth.py  test_requisition.py
docker/: .env copy  REAME.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: LoginModal.tsx  PageErrorBoundary.tsx  PageLayout.tsx  PageLoader.tsx  Sidebar.tsx  StatCard.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: AdminUsersPage.tsx  DashboardPage.tsx  DepartmentPage.tsx  LandingPage.tsx  MessagesPage.tsx  OrderDetailPage.tsx  OrdersPage.tsx  ProfilePage.tsx  (+7 more)
(+23 files in other folders)
